comp/java/y.output
   0  $accept : Program $end

   1  Program : CLASS IDENTIFIER LBRACE ProgramBody RBRACE

   2  ProgramBody : ProgramBody Element
   3              |

   4  Element : MethodDecl
   5          | FieldDecl
   6          | SEMICOLON

   7  MethodDecl : PUBLIC STATIC MethodHeader MethodBody
   8             | PUBLIC STATIC error RBRACE
   9             | PUBLIC STATIC error SEMICOLON
  10             | error RBRACE

  11  FieldDecl : PUBLIC STATIC Type IDENTIFIER FieldList SEMICOLON
  12            | error SEMICOLON

  13  FieldList : FieldList COMMA IDENTIFIER
  14            |

  15  Type : BOOL
  16       | INT
  17       | DOUBLE

  18  TypeArray : STRING LSQ RSQ

  19  TypeVoid : VOID

  20  MethodHeader : Type IDENTIFIER LPAR MethodParams RPAR
  21               | TypeVoid IDENTIFIER LPAR MethodParams RPAR

  22  MethodParams : FormalParamsList
  23               |

  24  FormalParamsList : FormalParamsList COMMA FormalParams
  25                   | FormalParams

  26  FormalParams : Type IDENTIFIER
  27               | TypeArray IDENTIFIER

  28  MethodBody : LBRACE MethodBodyContent RBRACE

  29  MethodBodyContent : MethodBodyContent BodyElement
  30                    |

  31  BodyElement : Statement
  32              | VarDecl

  33  VarDecl : Type IDENTIFIER FieldList SEMICOLON

  34  Statement : LBRACE StmtList RBRACE
  35            | IF LPAR Expr RPAR Statement
  36            | IF LPAR Expr RPAR Statement ELSE Statement
  37            | WHILE LPAR Expr RPAR Statement
  38            | RETURN SEMICOLON
  39            | RETURN Expr SEMICOLON
  40            | MethodInvocation SEMICOLON
  41            | Assignment SEMICOLON
  42            | ParseArgs SEMICOLON
  43            | SEMICOLON
  44            | PRINT LPAR Expr RPAR SEMICOLON
  45            | PRINT LPAR STRLIT RPAR SEMICOLON
  46            | error SEMICOLON
  47            | error RBRACE

  48  StmtList : StmtList Statement
  49           |

  50  MethodInvocation : IDENTIFIER LPAR Args RPAR

  51  Args : Expr ExprList
  52       |

  53  ExprList : ExprList COMMA Expr
  54           |

  55  Assignment : IDENTIFIER ASSIGN Expr

  56  ParseArgs : PARSEINT LPAR IDENTIFIER LSQ Expr RSQ RPAR
  57            | PARSEINT LPAR error RPAR

  58  Expr : Assignment
  59       | SimpleExpr

  60  SimpleExpr : SimpleExpr PLUS SimpleExpr
  61             | SimpleExpr MINUS SimpleExpr
  62             | SimpleExpr STAR SimpleExpr
  63             | SimpleExpr DIV SimpleExpr
  64             | SimpleExpr MOD SimpleExpr
  65             | SimpleExpr AND SimpleExpr
  66             | SimpleExpr OR SimpleExpr
  67             | SimpleExpr XOR SimpleExpr
  68             | SimpleExpr LSHIFT SimpleExpr
  69             | SimpleExpr RSHIFT SimpleExpr
  70             | SimpleExpr EQ SimpleExpr
  71             | SimpleExpr NE SimpleExpr
  72             | SimpleExpr GT SimpleExpr
  73             | SimpleExpr GE SimpleExpr
  74             | SimpleExpr LT SimpleExpr
  75             | SimpleExpr LE SimpleExpr
  76             | MINUS SimpleExpr
  77             | PLUS SimpleExpr
  78             | NOT SimpleExpr
  79             | LPAR Expr RPAR
  80             | LPAR error RPAR
  81             | MethodInvocation
  82             | ParseArgs
  83             | IDENTIFIER
  84             | IDENTIFIER DOTLENGTH
  85             | NATURAL
  86             | DECIMAL
  87             | BOOLLIT

state 0
	$accept : . Program $end  (0)

	CLASS  shift 1
	.  error

	Program  goto 2


state 1
	Program : CLASS . IDENTIFIER LBRACE ProgramBody RBRACE  (1)

	IDENTIFIER  shift 3
	.  error


state 2
	$accept : Program . $end  (0)

	$end  accept


state 3
	Program : CLASS IDENTIFIER . LBRACE ProgramBody RBRACE  (1)

	LBRACE  shift 4
	.  error


state 4
	Program : CLASS IDENTIFIER LBRACE . ProgramBody RBRACE  (1)
	ProgramBody : .  (3)

	.  reduce 3

	ProgramBody  goto 5


state 5
	Program : CLASS IDENTIFIER LBRACE ProgramBody . RBRACE  (1)
	ProgramBody : ProgramBody . Element  (2)

	error  shift 6
	PUBLIC  shift 7
	RBRACE  shift 8
	SEMICOLON  shift 9
	.  error

	Element  goto 10
	MethodDecl  goto 11
	FieldDecl  goto 12


state 6
	MethodDecl : error . RBRACE  (10)
	FieldDecl : error . SEMICOLON  (12)

	RBRACE  shift 13
	SEMICOLON  shift 14
	.  error


state 7
	MethodDecl : PUBLIC . STATIC MethodHeader MethodBody  (7)
	MethodDecl : PUBLIC . STATIC error RBRACE  (8)
	MethodDecl : PUBLIC . STATIC error SEMICOLON  (9)
	FieldDecl : PUBLIC . STATIC Type IDENTIFIER FieldList SEMICOLON  (11)

	STATIC  shift 15
	.  error


state 8
	Program : CLASS IDENTIFIER LBRACE ProgramBody RBRACE .  (1)

	.  reduce 1


state 9
	Element : SEMICOLON .  (6)

	.  reduce 6


state 10
	ProgramBody : ProgramBody Element .  (2)

	.  reduce 2


state 11
	Element : MethodDecl .  (4)

	.  reduce 4


state 12
	Element : FieldDecl .  (5)

	.  reduce 5


state 13
	MethodDecl : error RBRACE .  (10)

	.  reduce 10


state 14
	FieldDecl : error SEMICOLON .  (12)

	.  reduce 12


state 15
	MethodDecl : PUBLIC STATIC . MethodHeader MethodBody  (7)
	MethodDecl : PUBLIC STATIC . error RBRACE  (8)
	MethodDecl : PUBLIC STATIC . error SEMICOLON  (9)
	FieldDecl : PUBLIC STATIC . Type IDENTIFIER FieldList SEMICOLON  (11)

	error  shift 16
	BOOL  shift 17
	INT  shift 18
	DOUBLE  shift 19
	VOID  shift 20
	.  error

	Type  goto 21
	TypeVoid  goto 22
	MethodHeader  goto 23


state 16
	MethodDecl : PUBLIC STATIC error . RBRACE  (8)
	MethodDecl : PUBLIC STATIC error . SEMICOLON  (9)

	RBRACE  shift 24
	SEMICOLON  shift 25
	.  error


state 17
	Type : BOOL .  (15)

	.  reduce 15


state 18
	Type : INT .  (16)

	.  reduce 16


state 19
	Type : DOUBLE .  (17)

	.  reduce 17


state 20
	TypeVoid : VOID .  (19)

	.  reduce 19


state 21
	FieldDecl : PUBLIC STATIC Type . IDENTIFIER FieldList SEMICOLON  (11)
	MethodHeader : Type . IDENTIFIER LPAR MethodParams RPAR  (20)

	IDENTIFIER  shift 26
	.  error


state 22
	MethodHeader : TypeVoid . IDENTIFIER LPAR MethodParams RPAR  (21)

	IDENTIFIER  shift 27
	.  error


state 23
	MethodDecl : PUBLIC STATIC MethodHeader . MethodBody  (7)

	LBRACE  shift 28
	.  error

	MethodBody  goto 29


state 24
	MethodDecl : PUBLIC STATIC error RBRACE .  (8)

	.  reduce 8


state 25
	MethodDecl : PUBLIC STATIC error SEMICOLON .  (9)

	.  reduce 9


state 26
	FieldDecl : PUBLIC STATIC Type IDENTIFIER . FieldList SEMICOLON  (11)
	MethodHeader : Type IDENTIFIER . LPAR MethodParams RPAR  (20)
	FieldList : .  (14)

	LPAR  shift 30
	SEMICOLON  reduce 14
	COMMA  reduce 14

	FieldList  goto 31


state 27
	MethodHeader : TypeVoid IDENTIFIER . LPAR MethodParams RPAR  (21)

	LPAR  shift 32
	.  error


state 28
	MethodBody : LBRACE . MethodBodyContent RBRACE  (28)
	MethodBodyContent : .  (30)

	.  reduce 30

	MethodBodyContent  goto 33


state 29
	MethodDecl : PUBLIC STATIC MethodHeader MethodBody .  (7)

	.  reduce 7


state 30
	MethodHeader : Type IDENTIFIER LPAR . MethodParams RPAR  (20)
	MethodParams : .  (23)

	BOOL  shift 17
	INT  shift 18
	DOUBLE  shift 19
	STRING  shift 34
	RPAR  reduce 23

	Type  goto 35
	TypeArray  goto 36
	MethodParams  goto 37
	FormalParams  goto 38
	FormalParamsList  goto 39


state 31
	FieldDecl : PUBLIC STATIC Type IDENTIFIER FieldList . SEMICOLON  (11)
	FieldList : FieldList . COMMA IDENTIFIER  (13)

	SEMICOLON  shift 40
	COMMA  shift 41
	.  error


state 32
	MethodHeader : TypeVoid IDENTIFIER LPAR . MethodParams RPAR  (21)
	MethodParams : .  (23)

	BOOL  shift 17
	INT  shift 18
	DOUBLE  shift 19
	STRING  shift 34
	RPAR  reduce 23

	Type  goto 35
	TypeArray  goto 36
	MethodParams  goto 42
	FormalParams  goto 38
	FormalParamsList  goto 39


state 33
	MethodBody : LBRACE MethodBodyContent . RBRACE  (28)
	MethodBodyContent : MethodBodyContent . BodyElement  (29)

	error  shift 43
	LBRACE  shift 44
	RBRACE  shift 45
	SEMICOLON  shift 46
	BOOL  shift 17
	INT  shift 18
	DOUBLE  shift 19
	IF  shift 47
	WHILE  shift 48
	RETURN  shift 49
	PRINT  shift 50
	PARSEINT  shift 51
	IDENTIFIER  shift 52
	.  error

	Type  goto 53
	BodyElement  goto 54
	VarDecl  goto 55
	Statement  goto 56
	MethodInvocation  goto 57
	Assignment  goto 58
	ParseArgs  goto 59


state 34
	TypeArray : STRING . LSQ RSQ  (18)

	LSQ  shift 60
	.  error


state 35
	FormalParams : Type . IDENTIFIER  (26)

	IDENTIFIER  shift 61
	.  error


state 36
	FormalParams : TypeArray . IDENTIFIER  (27)

	IDENTIFIER  shift 62
	.  error


state 37
	MethodHeader : Type IDENTIFIER LPAR MethodParams . RPAR  (20)

	RPAR  shift 63
	.  error


state 38
	FormalParamsList : FormalParams .  (25)

	.  reduce 25


state 39
	MethodParams : FormalParamsList .  (22)
	FormalParamsList : FormalParamsList . COMMA FormalParams  (24)

	COMMA  shift 64
	RPAR  reduce 22


state 40
	FieldDecl : PUBLIC STATIC Type IDENTIFIER FieldList SEMICOLON .  (11)

	.  reduce 11


state 41
	FieldList : FieldList COMMA . IDENTIFIER  (13)

	IDENTIFIER  shift 65
	.  error


state 42
	MethodHeader : TypeVoid IDENTIFIER LPAR MethodParams . RPAR  (21)

	RPAR  shift 66
	.  error


state 43
	Statement : error . SEMICOLON  (46)
	Statement : error . RBRACE  (47)

	RBRACE  shift 67
	SEMICOLON  shift 68
	.  error


state 44
	Statement : LBRACE . StmtList RBRACE  (34)
	StmtList : .  (49)

	.  reduce 49

	StmtList  goto 69


state 45
	MethodBody : LBRACE MethodBodyContent RBRACE .  (28)

	.  reduce 28


state 46
	Statement : SEMICOLON .  (43)

	.  reduce 43


state 47
	Statement : IF . LPAR Expr RPAR Statement  (35)
	Statement : IF . LPAR Expr RPAR Statement ELSE Statement  (36)

	LPAR  shift 70
	.  error


state 48
	Statement : WHILE . LPAR Expr RPAR Statement  (37)

	LPAR  shift 71
	.  error


state 49
	Statement : RETURN . SEMICOLON  (38)
	Statement : RETURN . Expr SEMICOLON  (39)

	LPAR  shift 72
	SEMICOLON  shift 73
	PARSEINT  shift 51
	PLUS  shift 74
	MINUS  shift 75
	NOT  shift 76
	IDENTIFIER  shift 77
	NATURAL  shift 78
	DECIMAL  shift 79
	BOOLLIT  shift 80
	.  error

	MethodInvocation  goto 81
	Assignment  goto 82
	ParseArgs  goto 83
	Expr  goto 84
	SimpleExpr  goto 85


state 50
	Statement : PRINT . LPAR Expr RPAR SEMICOLON  (44)
	Statement : PRINT . LPAR STRLIT RPAR SEMICOLON  (45)

	LPAR  shift 86
	.  error


state 51
	ParseArgs : PARSEINT . LPAR IDENTIFIER LSQ Expr RSQ RPAR  (56)
	ParseArgs : PARSEINT . LPAR error RPAR  (57)

	LPAR  shift 87
	.  error


state 52
	MethodInvocation : IDENTIFIER . LPAR Args RPAR  (50)
	Assignment : IDENTIFIER . ASSIGN Expr  (55)

	LPAR  shift 88
	ASSIGN  shift 89
	.  error


state 53
	VarDecl : Type . IDENTIFIER FieldList SEMICOLON  (33)

	IDENTIFIER  shift 90
	.  error


state 54
	MethodBodyContent : MethodBodyContent BodyElement .  (29)

	.  reduce 29


state 55
	BodyElement : VarDecl .  (32)

	.  reduce 32


state 56
	BodyElement : Statement .  (31)

	.  reduce 31


state 57
	Statement : MethodInvocation . SEMICOLON  (40)

	SEMICOLON  shift 91
	.  error


state 58
	Statement : Assignment . SEMICOLON  (41)

	SEMICOLON  shift 92
	.  error


state 59
	Statement : ParseArgs . SEMICOLON  (42)

	SEMICOLON  shift 93
	.  error


state 60
	TypeArray : STRING LSQ . RSQ  (18)

	RSQ  shift 94
	.  error


state 61
	FormalParams : Type IDENTIFIER .  (26)

	.  reduce 26


state 62
	FormalParams : TypeArray IDENTIFIER .  (27)

	.  reduce 27


state 63
	MethodHeader : Type IDENTIFIER LPAR MethodParams RPAR .  (20)

	.  reduce 20


state 64
	FormalParamsList : FormalParamsList COMMA . FormalParams  (24)

	BOOL  shift 17
	INT  shift 18
	DOUBLE  shift 19
	STRING  shift 34
	.  error

	Type  goto 35
	TypeArray  goto 36
	FormalParams  goto 95


state 65
	FieldList : FieldList COMMA IDENTIFIER .  (13)

	.  reduce 13


state 66
	MethodHeader : TypeVoid IDENTIFIER LPAR MethodParams RPAR .  (21)

	.  reduce 21


state 67
	Statement : error RBRACE .  (47)

	.  reduce 47


state 68
	Statement : error SEMICOLON .  (46)

	.  reduce 46


state 69
	Statement : LBRACE StmtList . RBRACE  (34)
	StmtList : StmtList . Statement  (48)

	error  shift 43
	LBRACE  shift 44
	RBRACE  shift 96
	SEMICOLON  shift 46
	IF  shift 47
	WHILE  shift 48
	RETURN  shift 49
	PRINT  shift 50
	PARSEINT  shift 51
	IDENTIFIER  shift 52
	.  error

	Statement  goto 97
	MethodInvocation  goto 57
	Assignment  goto 58
	ParseArgs  goto 59


state 70
	Statement : IF LPAR . Expr RPAR Statement  (35)
	Statement : IF LPAR . Expr RPAR Statement ELSE Statement  (36)

	LPAR  shift 72
	PARSEINT  shift 51
	PLUS  shift 74
	MINUS  shift 75
	NOT  shift 76
	IDENTIFIER  shift 77
	NATURAL  shift 78
	DECIMAL  shift 79
	BOOLLIT  shift 80
	.  error

	MethodInvocation  goto 81
	Assignment  goto 82
	ParseArgs  goto 83
	Expr  goto 98
	SimpleExpr  goto 85


state 71
	Statement : WHILE LPAR . Expr RPAR Statement  (37)

	LPAR  shift 72
	PARSEINT  shift 51
	PLUS  shift 74
	MINUS  shift 75
	NOT  shift 76
	IDENTIFIER  shift 77
	NATURAL  shift 78
	DECIMAL  shift 79
	BOOLLIT  shift 80
	.  error

	MethodInvocation  goto 81
	Assignment  goto 82
	ParseArgs  goto 83
	Expr  goto 99
	SimpleExpr  goto 85


state 72
	SimpleExpr : LPAR . Expr RPAR  (79)
	SimpleExpr : LPAR . error RPAR  (80)

	error  shift 100
	LPAR  shift 72
	PARSEINT  shift 51
	PLUS  shift 74
	MINUS  shift 75
	NOT  shift 76
	IDENTIFIER  shift 77
	NATURAL  shift 78
	DECIMAL  shift 79
	BOOLLIT  shift 80
	.  error

	MethodInvocation  goto 81
	Assignment  goto 82
	ParseArgs  goto 83
	Expr  goto 101
	SimpleExpr  goto 85


state 73
	Statement : RETURN SEMICOLON .  (38)

	.  reduce 38


state 74
	SimpleExpr : PLUS . SimpleExpr  (77)

	LPAR  shift 72
	PARSEINT  shift 51
	PLUS  shift 74
	MINUS  shift 75
	NOT  shift 76
	IDENTIFIER  shift 102
	NATURAL  shift 78
	DECIMAL  shift 79
	BOOLLIT  shift 80
	.  error

	MethodInvocation  goto 81
	ParseArgs  goto 83
	SimpleExpr  goto 103


state 75
	SimpleExpr : MINUS . SimpleExpr  (76)

	LPAR  shift 72
	PARSEINT  shift 51
	PLUS  shift 74
	MINUS  shift 75
	NOT  shift 76
	IDENTIFIER  shift 102
	NATURAL  shift 78
	DECIMAL  shift 79
	BOOLLIT  shift 80
	.  error

	MethodInvocation  goto 81
	ParseArgs  goto 83
	SimpleExpr  goto 104


state 76
	SimpleExpr : NOT . SimpleExpr  (78)

	LPAR  shift 72
	PARSEINT  shift 51
	PLUS  shift 74
	MINUS  shift 75
	NOT  shift 76
	IDENTIFIER  shift 102
	NATURAL  shift 78
	DECIMAL  shift 79
	BOOLLIT  shift 80
	.  error

	MethodInvocation  goto 81
	ParseArgs  goto 83
	SimpleExpr  goto 105


state 77
	MethodInvocation : IDENTIFIER . LPAR Args RPAR  (50)
	Assignment : IDENTIFIER . ASSIGN Expr  (55)
	SimpleExpr : IDENTIFIER .  (83)
	SimpleExpr : IDENTIFIER . DOTLENGTH  (84)

	LPAR  shift 88
	ASSIGN  shift 89
	DOTLENGTH  shift 106
	RPAR  reduce 83
	RSQ  reduce 83
	SEMICOLON  reduce 83
	COMMA  reduce 83
	PLUS  reduce 83
	MINUS  reduce 83
	STAR  reduce 83
	DIV  reduce 83
	MOD  reduce 83
	AND  reduce 83
	OR  reduce 83
	XOR  reduce 83
	LSHIFT  reduce 83
	RSHIFT  reduce 83
	EQ  reduce 83
	GE  reduce 83
	GT  reduce 83
	LE  reduce 83
	LT  reduce 83
	NE  reduce 83


state 78
	SimpleExpr : NATURAL .  (85)

	.  reduce 85


state 79
	SimpleExpr : DECIMAL .  (86)

	.  reduce 86


state 80
	SimpleExpr : BOOLLIT .  (87)

	.  reduce 87


state 81
	SimpleExpr : MethodInvocation .  (81)

	.  reduce 81


state 82
	Expr : Assignment .  (58)

	.  reduce 58


state 83
	SimpleExpr : ParseArgs .  (82)

	.  reduce 82


state 84
	Statement : RETURN Expr . SEMICOLON  (39)

	SEMICOLON  shift 107
	.  error

